# protlib-designer

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
example_data/: trastuzumab_spm.csv
lp_protein_design/: solve.py  utils.py
protlib_designer/: config.py  dataloader.py  solution_manager.py  utils.py
protlib_designer/filter/: filter.py
protlib_designer/generator/: generator.py  ilp_generator.py
protlib_designer/scorer/: ifold_scorer.py  plm_scorer.py
protlib_designer/scorer/pmpnn/: extra_utils.py  protein.py  runner.py  utils.py
protlib_designer/solver/: generate_and_remove_solver.py
scripts/: _run_protlib_designer.py  old_solve.py  run_ifold_scorer.py  run_pipeline.py  run_plm_scorer.py  run_protlib_designer.py
