[metadata]
name = lp-protein-design
version = 0.0.1
author = Mikel Landajuela
author_email =
description = Linear programming for protein design
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.23.2
    pandas==1.4.4
    pulp

[options.extras_require]
dev =
    black==22.8.0
    flake8==5.0.4
    isort