[metadata]
name = protlib_designer
version = 0.0.1
author = Mikel Landajuela
author_email =
description = Integer Linear Programming for Protein Library Design
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    numpy==1.26.4
    pandas
    pulp

[options.extras_require]
dev =
    black==22.8.0
    flake8==5.0.4
    pytest
    coverage
plm = 
    torch
    transformers